--- a/public/css/main.css
+++ b/public/css/main.css
@@ -225,6 +225,22 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid #4771fa ;
+  padding: 0.5rem;
+  border-radius: 3px;
+  background: #b9c9ff;
+  color: #4771fa;
+  text-align: center;
+}
+.user-message--error{
+  border-color: red;
+  color: red;
+  background-color: lightpink;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -233,4 +249,8 @@ form {
   #side-menu-toggle {
     display: none;
   }
+  .user-message {
+    margin: auto;
+    width: 30rem;
+  } 
 }
