--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -8,11 +8,7 @@
 
     <main>
         <%- include('../includes/message.ejs') %>
-        <form class="login-form" action="/signup" method="POST">
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
+        <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
@@ -22,7 +18,10 @@
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Sign Up</button>
+            <input type="hidden" name="userId" value="<%= userId %>">
+            <input type="hidden" name="token" value="<%= token %>">
+
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
     <%- include('../includes/end.ejs') %>
