--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -8,21 +8,14 @@
 
     <main>
         <%- include('../includes/message.ejs') %>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/reset" method="POST">
             <div class="form-control">
                 <label for="email">E-mail
                 </label>
                 <input type="email" name="email" id="email" placeholder="enter your mail">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Reset Password</button>
         </form>
-        <div class="centered">
-            <a href="/reset">Forgot your password</a>
-        </div>
     </main>
     <%- include('../includes/end.ejs') %>
