--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -11,11 +11,13 @@
         <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input class="<%= validationErrors.find(e=> e.param === 'password') ? 'invalid'  : '' %>"
+                    type="password" name="password" id="password" value="<%= password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
+                <input class="<%= validationErrors.find(e=> e.param === 'confirmPassword') ? 'invalid'  : '' %>"
+                    type="password" name="confirmPassword" id="confirmPassword" value="<%= confirmPassword %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="hidden" name="userId" value="<%= userId %>">
