--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -9,10 +9,11 @@
     <main>
         <%- include('../includes/message.ejs') %>
         <form class="login-form" action="/reset" method="POST">
+
             <div class="form-control">
-                <label for="email">E-mail
-                </label>
-                <input type="email" name="email" id="email" placeholder="enter your mail">
+                <label for="email">E-Mail</label>
+                <input class="<%= validationErrors.find(e=> e.param === 'email') ? 'invalid'  : '' %>" type="email"
+                    name="email" id="email" value="<%= email %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Reset Password</button>
