--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -9,18 +9,22 @@
     <main>
         <%- include('../includes/message.ejs') %>
         <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>"
-            method="POST">
+            method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title"
                     class="<%= validationErrors.find(e=> e.param === 'title') ? 'invalid'  : '' %>"
                     value="<% if (editing||errorMessage!=='') { %><%= product.title %><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input type="text" name="imageUrl" id="imageUrl"
                     class="<%= validationErrors.find(e=> e.param === 'imageUrl') ? 'invalid'  : '' %>"
                     value="<% if (editing||errorMessage!=='') { %><%= product.imageUrl %><% } %>">
+            </div> -->
+            <div class="form-control">
+                <label for="image">Image</label>
+                <input type="file" name="image" id="image">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
