--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,7 +247,26 @@ form {
   color: red;
   background-color: lightpink;
 }
+.pagination {
+  margin-top: 2rem;
+ text-align: center;
+}
 
+.pagination a {
+  text-decoration: none;
+  color:#00695c;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  border-radius: 3px;
+  margin: 0 1rem;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
+  color:white;
+  background-color: #00695c;
+}
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
