--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -10,6 +10,7 @@
         <div class="grid">
             <% for (let product of prods) { %>
             <article class="card product-item">
+
                 <header class="card__header">
                     <h1 class="product__title"><%= product.title %></h1>
                 </header>
@@ -25,8 +26,10 @@
                     <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                 </div>
             </article>
+
             <% } %>
         </div>
+        <%- include('../includes/pagination.ejs',{currentPage,nextPage,previousPage,lastPage,hasNextPage,hasPreviousPage}) %>
         <% } else { %>
         <h1>No Products Found!</h1>
         <% } %>
