--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -21,10 +21,11 @@
         </ul>
         <hr>
         <div class="centered">
-            <form action="/create-order" method="POST">
+            <a href="/checkout" class="btn">Order Now!</a>
+            <!-- <form action="/checkout" method="POST">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button type="submit" class="btn">Order Now!</button>
-            </form>
+                <button type="submit" class="btn"></button>
+            </form> -->
         </div>
 
         <% } else { %>
